@@ -22,6 +22,7 @@ package fr.utbm.ciad.labmanager.data.organization;
 import java.io.IOException;
 import java.io.Serializable;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 import java.util.HashSet;
@@ -373,7 +374,11 @@ public class OrganizationAddress implements Serializable, JsonSerializable, Comp
 	public URL getGoogleMapURL() throws MalformedURLException {
 		final var link = getGoogleMapLink();
 		if (!Strings.isNullOrEmpty(link)) {
-			return new URL(link);
+			try {
+				return new URI(link).toURL();
+			} catch (Throwable ex) {
+				//
+			}
 		}
 		return null;
 	}
